Corriguendo errores y funcionalidad CRUD

--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,5 +1,5 @@
  
 <h1>{{statusCode}}</h1>
 <p>{{message}}</p>
-<a href="http://localhost:3000/">Go to the front page →</a>
+<a href="http://localhost:3000/">Vuelve a la pagina de inicio →</a>
 
