--- a/views/partials/navigation.hbs
+++ b/views/partials/navigation.hbs
@@ -11,9 +11,9 @@
             aria-haspopup="true" aria-expanded="false">
           Aulas</a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/links">Todas las aulas</a>
+            <a class="dropdown-item" href="/aulas">Todas las aulas</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/links/add">Añadir aula</a>
+            <a class="dropdown-item" href="/aulas/add">Añadir aula</a>
           </div>
         </li>
         <li class="nav-item"><a class="nav-link" href="/profile">Perfil</a></li>
