--- a/views/aulas/add.hbs
+++ b/views/aulas/add.hbs
@@ -8,7 +8,7 @@
                             <input type="text" name="title" class="form-control" placeholder="Titulo" autofocus>
                         </div>
                         <div class="form-group">
-                            <input type="url" name="url" class="form-control" placeholder="URL">
+                            <input type="url" name="url" class="form-control" placeholder="URL imagen">
                         </div>
                         <div class="form-group">
                             <textarea name="description" rows="2" class="form-control" placeholder="Descripción"></textarea>
