--- a/views/partials/navigation.hbs
+++ b/views/partials/navigation.hbs
@@ -6,6 +6,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
+        {{#if user}}
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
@@ -18,6 +19,14 @@
         </li>
         <li class="nav-item"><a class="nav-link" href="/profile">Perfil</a></li>
         <li class="nav-item"><a class="nav-link" href="/logout">Cerrar sesión</a></li>
+        {{else}}
+        <li class="nav-item">
+          <a class="nav-link" href="/signin">Regístrate</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/signup">Iniciar sesión</a>
+        </li>
+        {{/if}}
       </ul>
     </div>
   </div>
