--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -5,9 +5,7 @@
                 <div class="card-body">
                     <h3>Bienvenido/a {{user.fullname}}</h3>
                     <h4>{{user.username}}</h4>
-                    <a href="/links" class="btn btn-primary m-4">
-                        Añade tus aulas    
-                    </a>
+                    <a href="/aulas" class="btn btn-primary m-4">Añade tus aulas</a>
                 </div>
             </div>
         </div>
