--- a/views/partials/navigation.hbs
+++ b/views/partials/navigation.hbs
@@ -21,10 +21,10 @@
         <li class="nav-item"><a class="nav-link" href="/logout">Cerrar sesión</a></li>
         {{else}}
         <li class="nav-item">
-          <a class="nav-link" href="/signin">Regístrate</a>
+          <a class="nav-link" href="/signup">Regístrate</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/signup">Iniciar sesión</a>
+          <a class="nav-link" href="/signin">Iniciar sesión</a>
         </li>
         {{/if}}
       </ul>
